# agentic-ai-contract-amendment-azure

./: .gitignore  README.md
api/: pyproject.toml  redline_demo.html  requirements.txt
api/src/contract_ai/: app.py  models.py  pipeline.py
api/src/contract_ai.egg-info/: SOURCES.txt  requires.txt  top_level.txt
api/src/contract_ai/agents/: ai_disclosure_agent.py  planner.py  reviewer.py
api/src/contract_ai/patching/: patch_apply.py
api/src/contract_ai/redline/: diff_engine.py
api/src/contract_ai/tests/: run_redline_demo.py  test_redline.py
api/src/contract_ai/utils/: section_extractor.py
docs/sample-input/: sample_contract.txt
